tests/should_fail/type_nested_option.nv
module main

// SHOULD FAIL: nested Option type — Option(Option(Int)) not allowed
fn bad() -> Option(Option(Int)) {
    return None(Option(Int))
}
println(bad())
